# mlops-zoomcamp

./: .gitignore
01-intro/: pyproject.toml
01-intro/notebooks/: duration-prediction.ipynb
02-experiment-tracking/: pyproject.toml
02-experiment-tracking/homework/: hpo.py  preprocess_data.py  register_model.py  train.py
02-experiment-tracking/notebooks/: duration-prediction.ipynb  results.py
02-experiment-tracking/running-mlflow-examples/: scenario-1.ipynb
