[tool.poetry]
name = "01-intro"
version = "0.1.0"
description = ""
authors = ["Luis Ek <52711401+lek18@users.noreply.github.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "^1.2.2"
jupyter = "^1.0.0"
pandas = "^2.0.1"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
pyarrow = "^12.0.0"
fastparquet = "^2023.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
